# l2longtail

./: .env.example  .gitignore  AGENTS.md  AUDIT_REPORT.md  Cargo.toml  NewLogic.md  README.md  VPS_DEPLOY.md  app.py  build_plan.md  log.md  log.txt  new_structure.md  orchestrator.py  process_a_indexer.py  process_b_sniper.py  pyproject.toml  readme222.md  refactor.md  refactor_build.md  requirements.txt  results.csv  revision 2.md  rust_bridge.md  session-ses_0ce7.md
.github/workflows/: ci.yml
agents/: execution_node.py  ingestion_node.py  slippage_analyst_node.py  spread_detector.py
config/: constants.py  factories.py  settings.py  whitelist.json
contracts/: FlashloanExecutor.sol
db/: blacklist.py  cache.py  cleared_tokens.py  schema.sql
graph/: pipeline.py
infra/: create2.py  dexscreener.py  flea_market_discovery.py  live_executor.py  local_pricing.py  logger_setup.py  multicall.py  onchain_pricing.py  pool_fetcher.py  price_oracle.py  rpc_manager.py  source_fetcher.py  token_discovery.py  v3_pool.py  websocket_listener.py
main/: .env.example  .gitignore  README.md  process_a_indexer.py  requirements.txt  system_structure.md
main/Skills/code_minifier/: skill.md
main/Skills/filter_gate/: gemini-code-1783241232583.md
main/Skills/slippage_math/: skill.md
main/agents/: filter_gate_node.py  minifier.py  rag_auditor_node.py  state.py
main/config/: blacklist.json  constants.py  factories.py  settings.py
main/graph/: checkpoint.py
main/infra/: flea_market_discovery.py  keystore.py  live_executor.py  local_pricing.py  pair_finder.py  rate_limiter.py
main/monitoring/: metrics.py
main/scripts/: run_dry_1h.py  run_live.py  run_scanner.py
main/systemd/: longtail.service
main/tests/: conftest.py  test_execution.py  test_filter_gate.py  test_minifier.py  test_rate_limiter.py  test_slippage.py
monitoring/: alerts.py  logger.py
scripts/: deploy_executor.py  run_dry.py  run_live.py  run_real_test.py  seed_blacklist.py  seed_v3_pools.py  seed_whitelist.py
src/: lib.rs
tests/: conftest.py  test_cache.py  test_pipeline.py  test_rag_auditor.py  test_v3_ingestion.py
