[project]
name = "longtail-arbitrage"
version = "0.1.0"
description = "Multi-agent long-tail arbitrage system for Arbitrum One"
requires-python = ">=3.12"
dependencies = [
    "web3[async]>=7.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "aiosqlite>=0.20.0",
    "google-genai>=1.0.0",
    "eth-account>=0.13.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "respx>=0.21.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["config*", "db*", "infra*", "agents*", "monitoring*", "scripts*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
